--- a/Seattle_Housing_Prices_Analysis_and_Prediction/Readme
+++ b/Seattle_Housing_Prices_Analysis_and_Prediction/Readme
@@ -1,1 +1,3 @@
-캐글 데이터 Seattle 집값 예측 관련 데이터에 대한 분석입니다.
+# Kaggle
+* This space is about Analysis Kaggle data of Seattle_Housing_Prices_Analysis_and_Prediction
+* If you can give me a question or tips and so on, Don't hesitate. Please Comments! Thank you
